[package]
name = "rtaichi_attr_impl"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
version = "0.0.1+1.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust language binding to the Taichi Runtime C-API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taichi-runtime = "0.0.5"
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
